--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -6,4 +6,27 @@
   padding: 10px;
   box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
+  gap: 5px;
+}
+
+.title {
+  font-size: 1.3rem;
+  font-weight: bold;
+  min-height: 50px;
+}
+
+.price {
+  color: green;
+  align-self: flex-end;
+  font-size: 1.2rem;
+}
+
+.quantity {
+  display: flex;
+  gap: 10px;
+  justify-self: flex-end;
+}
+
+input {
+  width: 25px;
 }
